// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlueBaseApp should render BlueBaseApp 1`] = `
<Text>
  Loading
</Text>
`;

exports[`BlueBaseApp should render BlueBaseApp 2`] = `
<View>
  <View>
    <Text
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto",
            "fontSize": 16,
            "fontWeight": "400",
          },
          undefined,
        ]
      }
    >
      🚀 BlueBase System Content!
    </Text>
  </View>
</View>
`;

exports[`BlueBaseApp should render default app when boot doesn't return anything 1`] = `null`;

exports[`BlueBaseApp should render error state when a child throws an error 1`] = `
<Text>
  💥 Boom!
</Text>
`;

exports[`BlueBaseApp should render error state when boot throws an error 1`] = `
<Text>
  Boot Error!
</Text>
`;

exports[`BlueBaseApp should render error state with custom message when a child throws a null error 1`] = `
<Text>
  An unknown error occured.
</Text>
`;

exports[`BlueBaseApp should render error state with custom message when in production mode 1`] = `
<Text>
  An unknown error occured.
</Text>
`;
